# recommendation

./: CMakeLists.txt  ClientRun.sh  Makefile  README.md  RankingService.thrift  Recommendation.cpp  RecommendationConfig.h  RecommendationConfig.h.in  ServerRun.sh  cmake.sh  ranking_service.properties
IOUtils/: CMakeLists.txt  Config.hpp  Redis.hpp  RedisClient.hpp
RankingClient/: CMakeLists.txt  RankingClient.cpp
RankingService/: CMakeLists.txt  RankingService.hpp
RankingServiceProtocol/: OnlineRankingService.cpp  OnlineRankingService.h  OnlineRankingService_server.skeleton.cpp  RankingService_constants.cpp  RankingService_constants.h  RankingService_types.cpp  RankingService_types.h
Test/: CMakeLists.txt  ConcurrencyTest.hpp  RedisTest.hpp  Singleton.hpp  Test.cpp  utils.cpp
recommendation.dSYM/Contents/: Info.plist
recommendation.dSYM/Contents/Resources/DWARF/: recommendation
